<?xml version="1.0" encoding="utf-8"?>
<!-->
Copyright 2016 Hermann Krumrey

This file is part of mal-tournament.

    mal-tournament is a program that lets a user pit his watched anime series
    from myanimelist.net against each other in an attempt to determine relative scores
    between the shows.

    mal-tournament is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    mal-tournament is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with mal-tournament. If not, see <http://www.gnu.org/licenses/>.
<-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:background="@color/colorDefaultBG"
                android:id="@+id/loginLayout"
                tools:context="net.namibsun.maltourn.android.activities.LoginActivity">
    <android.support.v7.widget.CardView android:layout_width="match_parent"
                                        android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

            <Spinner android:singleLine="true"
                     android:layout_gravity="center"
                     android:entries="@array/services"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/serviceSelector"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <EditText
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_username"
                        android:gravity="center"
                        android:id="@+id/usernameEntry" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <EditText
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_password"
                        android:gravity="center"
                        android:inputType="textPassword"
                        android:id="@+id/passwordEntry"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/loginRememberCheck"
                    android:text="@string/remember_check"/>

                <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingStart="3dp"
                    android:paddingRight="3dp"
                    android:paddingEnd="3dp"
                    android:text="@string/login_loginbutton"
                    android:gravity="center"
                    android:id="@+id/loginButton"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:src="@drawable/logo"/>

</LinearLayout>