<?xml version="1.0" encoding="utf-8"?>
<!-->
Copyright 2016 Hermann Krumrey

This file is part of mal-tournament.

    mal-tournament is a program that lets a user pit his watched anime series
    from myanimelist.net against each other in an attempt to determine relative scores
    between the shows.

    mal-tournament is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    mal-tournament is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with mal-tournament. If not, see <http://www.gnu.org/licenses/>.
<-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:background="@color/colorLoginBG"
                android:id="@+id/overViewLayout"
                tools:context="net.namibsun.maltourn.android.activities.OverViewActivity">

    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/loadingSimpleVs"
            android:indeterminate="true" />

    <android.support.v7.widget.CardView android:layout_width="fill_parent"
                                        android:layout_height="200dp"
                                        android:layout_marginBottom="10dp"
                                        android:id="@+id/topCompetitorCard"
                                        android:layout_centerInParent="false">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/topCompetitorTitle"
                    android:layout_centerHorizontal="true"
                    android:text=""/>
            <ImageView
                    android:layout_width="110dp"
                    android:layout_height="160dp"
                    android:scaleType="fitXY"
                    android:id="@+id/topCompetitorImage"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/topCompetitorTitle"
                    android:contentDescription="@string/top_competitor_desc"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView android:layout_width="match_parent"
                                        android:layout_height="100dp"
                                        android:id="@+id/drawResultCard"
                                        android:layout_marginBottom="10dp"
                                        android:layout_below="@+id/topCompetitorCard"
                                        android:layout_centerInParent="false">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/drawResultText"
                android:text="@string/draw_text"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView android:layout_width="match_parent"
                                        android:layout_height="200dp"
                                        android:id="@+id/bottomCompetitorCard"
                                        android:layout_below="@+id/drawResultCard"
                                        android:layout_centerInParent="false">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/bottomCompetitorTitle"
                    android:text=""/>
            <ImageView
                    android:layout_width="110dp"
                    android:layout_height="160dp"
                    android:scaleType="fitXY"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/bottomCompetitorTitle"
                    android:id="@+id/bottomCompetitorImage"
                    android:contentDescription="@string/bottom_competitor_desc"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>